fix: ModalRoot styles
Adjusted the positioning of Modal.Root when it overflows to take into account the height of the header part of the application.

Moved some CSS properties responsible for positioning from ConfirmModal to Modal.Root, as their location there will simplify customization of ConfirmModal styles.

--- a/features/confirm-modal/confirm-modal.module.scss
+++ b/features/confirm-modal/confirm-modal.module.scss
@@ -2,9 +2,6 @@
 @use '../../styles/mixins' as *;
 
 .modalContent {
-  display: flex;
-  max-height: 100vh;
-
   .cardRoot {
     @include flex($justify: null, $align: null, $direction: column);
     @include thin-scrollbar;
