--- a/shared/ui/modal/modal-root.module.scss
+++ b/shared/ui/modal/modal-root.module.scss
@@ -13,13 +13,24 @@
 }
 
 .content {
+  $header-half-height: var(--header-height) / 2;
+
   position: fixed;
   z-index: z-index('modal');
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, calc(-50% + $header-half-height));
+
+  // `display: flex` is required so that the child of the container can shrink.
+  //  This will allow you to set `overflow: hidden` to this child, so that you can then set `overflow: auto`
+  //  to any child element that involves scrolling the content.
+
+  // Remove `display: flex` and `max-height` if you are going to set a fixed height of the modal window
+  //  and at the same time retain the ability to auto-scroll an arbitrary child element
+  display: flex;
 
   max-width: 100%;
+  max-height: calc(100vh - var(--header-height));
   padding: 24px;
 
   animation: content-show 150ms cubic-bezier(0.16, 1, 0.3, 1);
